# Swint

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: aur-upload.yml  release-android.yml  release-desktop.yml
composeApp/: RustMatrixPort.kt  build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/frair/: frair.kt
composeApp/src/androidMain/kotlin/org/mlm/frair/: App.kt  Greeting.kt  MainActivity.kt  NativeLib.kt  Notifications.kt  Platform.kt  RustApi.android.kt  Sync.kt  SyncReciever.kt  SyncWorker.kt
composeApp/src/androidMain/kotlin/org/mlm/mages/: MagesApp.kt  MainActivity.kt  Platform.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_foreground.xml  ic_notif.xml  ic_notif_status_bar.xml  icon.xml  icon_tray.xml  icon_tray_with_bg.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/mlm/frair/: App.kt  AppStore.kt  MatrixService.kt  Model.kt  RustApi.kt
composeApp/src/commonMain/kotlin/org/mlm/mages/: App.kt  MatrixService.kt  Model.kt
composeApp/src/jvmMain/kotlin/org/mlm/frair/: DesktopMain.kt  Platform.kt
composeApp/src/jvmMain/kotlin/org/mlm/mages/: DesktopMain.kt  (+1 more)
composeApp/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
composeApp/src/main/res/xml/: filepaths.xml
fastlane/android/metadata/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
packaging/: io.github.mlm_games.mages.desktop  io.github.mlm_games.mages.metainfo.xml
packaging/snap/: snapcraft.yaml
rust/: Cargo.toml  build.rs  uniffi.android.toml  uniffi.jvm.toml
rust/src/: frair.udl  lib.rs
rust/uniffi-bindgen/: Cargo.toml
(+166 files in other folders)
