[package]
name = "frair_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = "0.29"

matrix-sdk = { version = "0.14.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "rustls-tls",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
matrix-sdk-ui = { version = "0.14.0", default-features = false }
futures-util = "0.3"


tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
thiserror = "2.0.16"
eyeball-im = "0.8.0"


[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
uniffi_bindgen = "0.29.4"
