[package]
name = "mages_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = "0.29.4"

matrix-sdk = { version = "0.14.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "rustls-tls",
    "sso-login",
    "automatic-room-key-forwarding",
    "bundled-sqlite",
] }
matrix-sdk-ui = { version = "0.14.0", default-features = false, features = [
    "rustls-tls",
] }
futures-util = "0.3"


tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1"
thiserror = "2"
mime = "0.3"
rand = "0.9.2"
matrix-sdk-base = "0.14.1"
blake3 = "1.8.2"
matrix-sdk-crypto = "0.14.0"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
uniffi_bindgen = "0.29.4"
